syntax = "proto3";
package wire;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/jpoz/conveyor/wire";

// Job data structure
message Job {
  // required
  string uuid = 1;
  string type = 2;
  string queue = 3;
  bytes payload = 4;

  // optional
  google.protobuf.Timestamp run_at = 5;
  string parent_uuid = 6;
  string predecessor_uuid = 7;

  // internal
  google.protobuf.Timestamp started_at = 8;
  int32 retry = 9;
  int32 max_retries = 10;
  string last_failure = 11;
}
